--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: auto;
+  max-width: 1400px;
+  height: 100%;
 }
 
 a {
@@ -19,8 +22,18 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
     background: black;
   }
+}
+
+#__next {
+  height: 100%;
+}
+
+.title-not-found {
+  color: darkgray;
+  text-align: center;
 }
